// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Avatar snapshots with default props 1`] = `
<ContextProvider
  value={Object {}}
>
  <Avatar
    onPress={[MockFunction]}
    src="some_url"
  />
</ContextProvider>
`;

exports[`Component: Avatar snapshots with other props 1`] = `
<ContextProvider
  value={Object {}}
>
  <Avatar
    alt="alt text"
    onPress={[MockFunction]}
    src="some_url"
    variant="square"
  />
</ContextProvider>
`;
